k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dgb-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dgb-server
  template:
    metadata:
      labels:
        app: dgb-server
    spec:
      containers:
        - name: server
          image: fschutt/dgb-server:1.0.3
          imagePullPolicy: Always
          resources:
            limits:
              memory: "128Mi"
              cpu: "100m"
          ports:
          - containerPort: 443
          - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dgb-sync
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dgb-sync
  template:
    metadata:
      labels:
        app: dgb-sync
    spec:
      containers:
        - name: sync-server
          image: fschutt/dgb-server:1.0.3
          imagePullPolicy: Always
          resources:
            limits:
              memory: "128Mi"
              cpu: "100m"
          ports:
          - containerPort: 8081
          - containerPort: 9418
          volumeMounts:
            - mountPath: "/mnt/data/files"
              name: persistent-volume
      volumes:
        - name: persistent-volume
          persistentVolumeClaim:
            claimName: persistent-volume
---
apiVersion: v1
kind: Service
metadata:
  name: dgb-loadbalancer
  labels:
    app: dgb-loadbalancer
spec:
  type: LoadBalancer  
  externalTrafficPolicy: Cluster
  selector:
    app: dgb-server
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8080
  - name: https
    protocol: TCP
    port: 443
    targetPort: 443
