k8s/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dgb-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dgb-server
  template:
    metadata:
      labels:
        app: dgb-server
    spec:
      containers:
        - name: server
          image: grundbuch/dgb-server:latest
          imagePullPolicy: Always
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
          - containerPort: 8080
      imagePullSecrets:
        - name: registrypullsecret
---
apiVersion: v1
kind: Service
metadata:
  name: dgb-loadbalancer
  labels:
    app: dgb-loadbalancer
spec:
  type: LoadBalancer  
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: dgb-server
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dgb-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: grundbuch-test.eu
      http:
        paths:
          - path: /*
            pathType: Prefix
            backend:
              service:
                name: dgb-loadbalancer
                port:
                  number: 80
